non-python notebook for dinosaurs like david

--- a/demo/demo.ipynb
+++ b/demo/demo.ipynb
@@ -9,6 +9,7 @@
    "outputs": [],
    "source": [
     "# edit the code path accordingly\n",
+    "# see cli_demo.py if notebooks aren't your thing\n",    
     "code_root = '/data0/shubhtuls/code/factored3d'\n",
     "import sys\n",
     "import numpy as np\n",
